--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
-<footer>
-  <div class="footer">
+<footer class="footer">
+  <div class="container">
     <h2 lang="uk" class="footer__title">Надмірне споживання алкоголю шкідливе для вашого здоров'я</h2>
     <p class="footer__info">
       © 2023 All Rights Reserved. Developed by<button
